--- a/piedra-papel-tijeras/index.html
+++ b/piedra-papel-tijeras/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Piedra-Papel-Tijeras</title>
 </head>
 <body>
     <h1>Escoge tu mano</h1>
